--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/nyk0r/nyk0r.github.io",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^1.0.1",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-wiredep": "^1.9.0"
